[package]
name = "oasis-runtime-sdk-contracts"
description = "Smart contracts module for the Oasis Runtime SDK."
version = "0.5.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
cbor = { version = "0.5.1", package = "oasis-cbor" }
oasis-contract-sdk-crypto = { path = "../../../contract-sdk/crypto" }
oasis-contract-sdk-types = { path = "../../../contract-sdk/types", features = ["oasis-runtime-sdk"] }
oasis-runtime-sdk = { path = "../.." }

# Internal Wasm3 bindings.
wasm3 = { git = "https://github.com/oasisprotocol/wasm3-rs", tag = "v0.3.3" }

# Third party.
anyhow = "1.0"
blake3 = { version = "~1.5.1", features = ["traits-preview"] }
lru = "0.12.3"
num-traits = "0.2.14"
once_cell = "1.8.0"
rand_core = { version = "0.6.4", default-features = false }
snap = "1"
thiserror = "1.0"
walrus = "0.20.3"

[dev-dependencies]
wat = "1.211"
k256 = "0.13.1"
hex = "0.4.2"
wasmprinter = "0.211.1"
pretty_assertions = "1.3.0"

[features]
debug-utils = []
benchmarks = [] # Enable inline benchmarks for use with `cargo bench`.
