[package]
name = "oasis-runtime-sdk-evm-new"
description = "New EVM module for the Oasis Runtime SDK."
version = "0.6.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
cbor = { version = "0.5.1", package = "oasis-cbor" }
oasis-runtime-sdk = { path = "../.." }

# Third party.
anyhow = "1.0"
base64 = "0.22.1"
blake3 = { version = "~1.5.1", features = ["traits-preview"] }
thiserror = "1.0"
hex = "0.4.2"
k256 = "0.13.1"
sha3 = { version = "0.10", default-features = false }
once_cell = "1.8.0"

# Ethereum.
ethabi = { version = "18.0.0", default-features = false, features = ["std"] }
ethereum = "0.15"
revm = { git = "https://github.com/bluealloy/revm", tag = "v42" }
fixed-hash = "0.8.0"
primitive-types = { version = "0.12", default-features = false, features = ["rlp", "num-traits"] }
rlp = "0.5.2"
uint = "0.9.1"

# Fuzzing.
honggfuzz = "0.5.56"
serde = { version = "1.0.203", features = ["derive"], optional = true }
serde_json = { version = "1.0.116", features = ["raw_value"], optional = true }

[dev-dependencies]
criterion = "0.5.1"
oasis-runtime-sdk = { path = "../..", features = ["test"] }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.116", features = ["raw_value"] }
ethabi = { version = "18.0.0", default-features = false, features = ["std", "full-serde"] }

[features]
default = []
test = ["serde", "serde_json"]

