[package]
name = "oasis-runtime-sdk-evm"
description = "EVM module for the Oasis Runtime SDK."
version = "0.4.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
cbor = { version = "0.5.1", package = "oasis-cbor" }
oasis-runtime-sdk = { path = "../.." }

# Third party.
anyhow = "1.0"
base64 = "0.13.0"
blake3 = { version = "~1.3.1", features = ["traits-preview"] }
thiserror = "1.0"
hex = "0.4.2"
sha2 = "0.9.5"
substrate-bn = "0.6.0"
ripemd160 = { version = "0.9", default-features = false }
k256 = "0.13.1"
sha3 = { version = "0.10", default-features = false }
num = { version = "0.4", features = ["alloc"], default-features = false }
once_cell = "1.8.0"
x25519-dalek = "1.1.0"
hmac = "0.11.0"
rand_core = { version = "0.6.4", default-features = false }

# Ethereum.
ethabi = { version = "18.0.0", default-features = false, features = ["std"] }
ethereum = "0.14"
evm = "0.39.1"
fixed-hash = "0.8.0"
primitive-types = { version = "0.12", default-features = false, features = ["rlp", "num-traits"] }
rlp = "0.5.2"
uint = "0.9.1"

[dev-dependencies]
criterion = "0.5.1"
oasis-runtime-sdk = { path = "../..", features = ["test"] }
rand = "0.7.3"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.87", features = ["raw_value"] }
ethabi = { version = "18.0.0", default-features = false, features = ["std", "full-serde"]}

[[bench]]
name = "criterion_benchmark"
harness = false
