[package]
name = "oasis-runtime-sdk-evm"
description = "EVM module for the Oasis Runtime SDK."
version = "0.6.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
cbor = { version = "0.5.1", package = "oasis-cbor" }
oasis-runtime-sdk = { path = "../.." }
oasis-runtime-sdk-macros = { path = "../../../runtime-sdk-macros" }

# Third party.
anyhow = "1.0"
base64 = "0.22.1"
blake3 = { version = "~1.5.1", features = ["traits-preview"] }
thiserror = "1.0"
hex = "0.4.2"
sha2 = "0.10.8"
substrate-bn = "0.6.0"
ripemd = { version = "0.1.3", default-features = false }
k256 = "0.13.1"
sha3 = { version = "0.10", default-features = false }
num = { version = "0.4", features = ["alloc"], default-features = false }
once_cell = "1.8.0"
x25519-dalek = "2.0.1"
hmac = "0.12.1"
rand_core = { version = "0.6.4", default-features = false }

# Ethereum.
ethabi = { version = "18.0.0", default-features = false, features = ["std"] }
ethereum = "0.15"
evm = { git = "https://github.com/oasisprotocol/evm", tag = "v0.39.1-oasis" }
fixed-hash = "0.8.0"
primitive-types = { version = "0.12", default-features = false, features = ["rlp", "num-traits"] }
rlp = "0.5.2"
uint = "0.9.1"

# Fuzzing.
honggfuzz = "0.5.56"
serde = { version = "1.0.203", features = ["derive"], optional = true }
serde_json = { version = "1.0.116", features = ["raw_value"], optional = true }

[dev-dependencies]
criterion = "0.5.1"
oasis-runtime-sdk = { path = "../..", features = ["test"] }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.116", features = ["raw_value"] }
ethabi = { version = "18.0.0", default-features = false, features = ["std", "full-serde"] }

[features]
default = []
test = ["serde", "serde_json", "oasis-runtime-sdk/test"]

[[bench]]
name = "criterion_benchmark"
harness = false
required-features = ["test"]

[[bin]]
name = "fuzz-precompile"
path = "fuzz/precompile.rs"
required-features = ["test"]

[[bin]]
name = "fuzz-precompile-corpus"
path = "fuzz/precompile_corpus.rs"
required-features = ["test"]

[[bin]]
name = "fuzz-precompile-contract-dispatch"
path = "fuzz/precompile_contract_dispatch.rs"
required-features = ["test"]

[[bin]]
name = "fuzz-precompile-contract-dispatch-corpus"
path = "fuzz/precompile_contract_dispatch_corpus.rs"
required-features = ["test"]
