[package]
name = "oasis-runtime-sdk-rofl-market"
description = "ROFL market module for the Oasis Runtime SDK."
version = "0.1.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
cbor = { version = "0.5.1", package = "oasis-cbor" }
oasis-runtime-sdk = { path = "../.." }
oasis-runtime-sdk-evm = { path = "../evm" }

# Third party.
anyhow = "1.0"
ethabi = { version = "18.0.0", default-features = false, features = ["std"] }
once_cell = "1.8.0"
rustc-hex = "2.0.1"
thiserror = "1.0"
zeroize = "1.7"
