cargo-features = ["strip"]

[package]
name = "hello"
version = "0.0.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
cbor = { version = "0.5.1", package = "oasis-cbor" }
oasis-contract-sdk = { path = "../../../contract-sdk" }
oasis-contract-sdk-storage = { path = "../../../contract-sdk/storage" }
oasis-contract-sdk-oas20 = { path = "../../../contract-sdk/specs/token/oas20" }

# Third party.
thiserror = "1.0.30"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = true
strip = true
