cargo-features = ["strip"]

[package]
name = "wormhole-token-bridge"
version = "0.1.0"
description = "wormhole token bridge contract"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
cbor = { version = "0.2.0", package = "oasis-cbor" }
oasis-contract-sdk = { path = "../../../contract-sdk" }
oasis-contract-sdk-storage = { path = "../../../contract-sdk/storage" }
oasis-contract-sdk-types = { path = "../../../contract-sdk/types" }
oasis-contract-sdk-oas20-types = { path = "../../../contract-sdk/specs/oas20/types" }
oasis-wormhole-types = { path = "../wormhole/types" }
oasis-oas20-wrapped-types = { path = "../oas20-wrapped/types" }

# Third party.
byteorder = "1.4.3"
sha3 = { version = "0.9.1", default-features = false }
thiserror = "1.0.26"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = true
strip = true
