[package]
name = "test-runtime-benchmarking"
version = "0.1.0"
authors = ["Oasis Protocol Foundation <info@oasisprotocol.org>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
oasis-runtime-sdk = { path = "../../../runtime-sdk", features = ["unsafe-allow-debug"] }
cbor = { version = "0.1.8", package = "oasis-cbor" }

# Third party.
thiserror = "1.0"
